src/objects/Expression_of_Dissatisfaction__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Expressions_of_Dissatisfaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Expressions_of_Dissatisfaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monetary_Value__c</fullName>
        <label>Monetary Value</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Concern</label>
    <nameField>
        <label>Expression of Disatisfaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Concerns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>